syntax = "proto3";
import "google/protobuf/empty.proto";
option java_multiple_files = true;
option java_package = "transactionManagerAX";

package forum;

service ITransactionManagerAX {
  rpc xa_prepare(Transaction) returns (Result);
  rpc xa_commit (Transaction) returns (google.protobuf.Empty);
  rpc xa_rollback (Transaction) returns (google.protobuf.Empty);
}


message Transaction {
  int32 tid = 1;
}

message Result {
  bool status = 1;
}